automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,23 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Palermo', 'Ricoleta', 'Santelmo', 'Puerto Madero', 'Belgrano', 'La Boca']"
+       "'Palermo'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palermo = neighborhoods[1]\n",
-    "neighborhood"
+    "palermo = neighborhoods[0]\n",
+    "palermo"
    ]
   },
   {
