--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,15 +71,14 @@
        "'Palermo'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "palermo = neighborhoods[0]\n",
-    "palermo\n",
-    "len(neigh)"
+    "palermo"
    ]
   },
   {
