--- a/index.ipynb
+++ b/index.ipynb
@@ -90,11 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La Boca'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca = neighborhoods[5]"
+    "la_boca = neighborhoods[5]\n",
+    "la_boca"
    ]
   },
   {
