--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,8 @@
    ],
    "source": [
     "buenos_marker = folium.Marker([ba_latitude, ba_longitude])\n",
-    "buenos_marker.add_to(buenos_map)"
+    "buenos_marker.add_to(buenos_map)\n",
+    "buse"
    ]
   },
   {
