automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -292,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fbb3ccb5ef0>"
+       "<folium.map.Marker at 0x7fbb3ccb5da0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
    "source": [
     "buenos_marker = folium.Marker([ba_latitude, ba_longitude])\n",
     "buenos_marker.add_to(buenos_map)\n",
-    "buse"
+    "buenos_marker"
    ]
   },
   {
