automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -292,10 +292,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fbb3ccb5cf8>"
+       "<folium.map.Marker at 0x7fbb3cc050f0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
