--- a/index.ipynb
+++ b/index.ipynb
@@ -471,7 +471,8 @@
    ],
    "source": [
     "import folium\n",
-    "buenos_map = folium.Map([marker_six], zoom_start = 12)\n",
+    "buenos_map = folium.Map(([ba_latitude, ba_longitude]), zoom_start = 12)\n",
+    "la\n",
     "la_boca_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
