automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -442,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = "
    ]
   },
   {
@@ -472,7 +472,6 @@
    "source": [
     "import folium\n",
     "buenos_map = folium.Map(([ba_latitude, ba_longitude]), zoom_start = 12)\n",
-    "la\n",
     "la_boca_marker.add_to(buenos_map)\n",
     "buenos_map"
    ]
