--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
     }
    ],
    "source": [
-    "la_boca_marker = [marker_six]"
+    "la_boca_marker = neighborhood_markers[marker_six]"
    ]
   },
   {
