automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,23 +438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'marker_six' is not defined",
+     "evalue": "name 'neighborhood_markers' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-e2c92f3f0e89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mla_boca_marker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmarker_six\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'marker_six' is not defined"
+      "\u001b[0;32m<ipython-input-28-f0a5e4b126d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mla_boca_marker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneighborhood_markers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmarker_six\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'neighborhood_markers' is not defined"
      ]
     }
    ],
    "source": [
-    "la_boca_marker = neighborhood_markers[marker_six]"
+    "la_boca_marker = neighborhood_markers(marker_s)"
    ]
   },
   {
